versioned_docs/version-3.9.1/Overview/Papers-Citing-JATOS.md
---
title: Papers citing JATOS
slug: /Papers-Citing-JATOS.html
sidebar_position: 2
---

JATOS has been used sucessfully to collect data all over the world. Here is a curated list of peer-reviewed publications (that we are aware of) that used JATOS to collect data. (You can also see the [full list of citations](https://scholar.google.com/scholar?oi=bibs&hl=en&cites=5951401270744316355,1084162777884423960).) 

Please [cite us](http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0130834) if you use JATOS for your research. It helps us with funding and it's great to see how we've contributed to science. 

**Please complete our short [survey](https://forms.gle/Jtjw4LxpyWVFEtG17) on how (much) you use JATOS (ca. 3 min). It’s very important for us!**

### 2026

Liang, Y., van Heuven, V.J., & van Hout, R. (2026) Recognizing vocal emotions in two unfamiliar languages: universal patterns versus cultural and prosodic proximity. *Phonetica*. [DOI](https://doi.org/10.1515/phon-2025-0046)
                    
Fletcher, P., Batkovskyte, I., Subramaniam, N., & Davis, M. (2026). Hallucination proneness is linked to over-reliance on internal priors for noisy speech. *Schizophrenia Bulletin* [DOI](https://doi.org/10.17863/CAM.128484)

Kamenetski, A., Mitrofanova, N., Ermolina, J., & Minor, S. (2026) Cross-linguistic influence in the processing of aspect in L2 English: Slavic, but not Norwegian L1 speakers associate past simple with completion. *Front. Lang. Sci.*  [DOI](https://doi.org/10.3389/flang.2026.1756472)

Colombatto, C., Fleming, S.M. (2026) Beliefs about accuracy shape confidence attributions to humans and artificial agents. *Commun Psychol.* [DOI(https://doi.org/10.1038/s44271-026-00445-4)

Senaldi, M. S. G., Palma, P., Iniesta, A., & Titone, D. (2026). Putting new words to sleep: Novel word learning depends on individual differences in bilingual experience. *Bilingualism: Language and Cognition*. [DOI](https://doi.org/10.1017/S1366728926101059)

Domínguez-Arriola, M. E., & Pell, M. D. (2026). Not worth my time! Understanding factors that make speech socially engaging. *Journal of Experimental Psychology: Human Perception and Performance*. [DOI](https://doi.org/10.1037/xhp0001410)

Nemati, F., Westbury, C., Rostami, H. et al. (2026) Extrapolated Persian Lexical Affect Norms (E-PLAN) from best–worst judgments of valence, arousal, dominance, and concreteness. *Behav Res* [DOI](https://doi.org/10.3758/s13428-026-02963-9)

Kuper, C., Rolfs, M. (2026) Rapid Motor Inhibition as a Mechanism to Prevent Outdated Movements. *Journal of Neuroscience* [DOI](https://www.doi.org/10.1523/JNEUROSCI.1319-25.2026)

Fenn, J., Estadieu, L., Gorki, M., Monno, I., Tauber, F., Teichmann, J., Levy-Tzedek, S., Speck, T., Müller, O. and Kiesel, A. (2026) Informing robot design through early public engagement: lay perceptions of soft versus rigid socially assistive and rescue robots. *Front. Robot. AI* [DOI](https://www.doi.org/10.3389/frobt.2026.1741946)

Yang, W., Rauwolf, P., Frances, C., Molina-Nieto, O., Duñabeitia, J.A., Thierry, G. (2024) Chinese-English bilinguals prefer being truthful in the native language. *Front. Lang. Sci.* [DOI](https://doi.org/10.3389/flang.2023.1293673)

Vinichenko, A., Vangsnes, Ø.A., Røyneland, U. (2026) Spotting the lect: Asymmetric literacy competencies in multilectal contexts. *Ampersand*. [DOI](https://doi.org/10.1016/j.amper.2026.100262)

Oparina, E., Antonio, D. S., Russo, G., Vieira, E. R., & Bigliassi, M. (2026). Unveiling the Intricacies of Implicit Motor Learning in Adults Recovered from COVID-19. *Journal of Motor Behavior*. [DOI](https://doi.org/10.1080/00222895.2026.2637940)

Roberts, B.R.T. & Bainbridge, W.A. (2026) Reverse engineering what makes a symbol memorable, Proc. Natl. Acad. Sci. U.S.A. [DOI](https://doi.org/10.1073/pnas.2530745123)

Aray, Y., Béna, J., Rouard, M., andCorneille, O. (2026) Repetition Increases Belief in Food and Nutrition (Mis)Information, But Nonprobative Images May Not. *Social Psychology*. [DOI](https://doi.org/10.1027/1864-9335/a000589)

Shivakumar V, Ostojić L and Legg E. (2026) Gaze cues and arrow cues modulate accuracy of recall of verbal items in a working memory task. *Open Res Europe*. [DOI](https://doi.org/10.12688/openreseurope.21720.2)

Shivakumar, V., Ostojić, L., Legg, E. (2026) Gaze cues and arrow cues modulate accuracy of recall of verbal items in a working memory task. *Open Res Europe* [DO](https://doi.org/10.12688/openreseurope.21720.2)

Castle, C. M., Velnić, M., & Jensberg, H. R. (2026). CLI, proficiency and L1-like choices: L3 Norwegian learners in later stages of acquisition. *Bilingualism: Language and Cognition*. [DOI](https://doi.org/10.1017/S136672892610100X)

Marilena, A., Massimiliano, U.A., Giovanni, O. et al. (2026) Food perception in Orthorexia nervosa: Craving or avoidance? *Eat Weight Disord* [DOI](https://doi.org/10.1007/s40519-026-01826-8)

Bröder, A., & Krauß, S. (2026). Nailing Down the Perceptual Explanation of the Date/Delay Effect in Temporal Discounting. *Experimental Psychology*. [DOI](https://doi.org/10.1027/1618-3169/a000657)

Duncan, D.H., van Moorselaar, D. & Theeuwes, J. (2026) Learning alters salience and proactive attentional priority. *Commun Psychol*. [DOI](https://doi.org/10.1038/s44271-026-00411-0)

Buschmeyer, E., Sander, L. B., Kiesel, A., Monno, I., Fenn, J., & Spanhel, K. (2026). Cultural differences in healthcare: An investigation using cognitive-affective mapping. *Cambridge Prisms: Global Mental Health*. [DOI](http://doi.org/10.1017/gmh.2025.10126)

Bröder, A., & Krauß, S. (2026). Nailing Down the Perceptual Explanation of the Date/Delay Effect in Temporal Discounting. *Experimental Psychology*. [DOI](https://doi.org/10.1027/1618-3169/a000657)

Myles, D., Bennett, D. B., & Newall, P. (2026). Cue the sad trombone: UK gambling regulations have not prevented the misuse of celebratory sound effects in online slots. *Behavioural Public Policy*. [DOI](https://doi.org/10.1017/bpp.2026.10035)

Li, C., Frischkorn, G. T., & Oberauer, K. (2026). Can we process information without encoding it into working memory? *Journal of Experimental Psychology: Learning, Memory, and Cognition*. [DOI](https://doi.org/10.1037/xlm0001585)

van Zoest, W., Higgins, A. (2026) Pointing over gaze: how saliency, proximity, and context shape spatial attention to embodied cues. *Psychological Research*. [DOI](https://doi.org/10.1007/s00426-026-02250-4)

Yang, W., Wei, Y., Rauwolf, P., Frances, C., Molina-Nieto, O., Duñabeitia, J. A., & Thierry, G. (2026). Verbal feedback modulates language choice and risk-taking in Chinese-English bilinguals. *Bilingualism: Language and Cognition*. [DOI](https://doi.org/10.1017/S136672892500029X)

Le Clézio, D., Delem, M., Monzel, M., Plancher, G. (2026) The Impact of Mental Images on Reasoning: A Study on Aphantasia. *Neuropsychologia*. [DOI](https://doi.org/10.1016/j.neuropsychologia.2026.109376)

Muylle, M., Hartsuiker, R.J. Nozari, N. (2026) On idle idols and ugly icons: Investigating lexical selection in typing through homophones. *Journal of Memory and Language*. [DOI](https://doi.org/10.1016/j.jml.2025.104703)

Can, M., Türüdü, S., Aydoğan, Z., Özgürsoy, O.B. (2026) Functional overload and adaptive failure during dual-tasking in Ménière’s disease. *Journal of Vestibular Research*. [DOI](https://doi.org/10.1177/09574271261418549)
  
Schreiner, M.R., Kunde, W. (2026) The representational nature of action–effect relations: A memory process dissociation approach. *Psychon Bull Rev*. [DOI](https://doi.org/10.3758/s13423-025-02794-3)

Kul, G., & Wills, A. J. (2026). The Comparison of Human and Machine Performance in Object Recognition. *Behavioral Sciences*. [DOI](https://doi.org/10.3390/bs16010109)

Ng, D.W., Lee, J.C., Lovibond, P.F. (2026) The role of prior beliefs in causal illusions. *Cognition* [DOI](https://doi.org/10.1016/j.cognition.2025.106290)

Wilson, C.J. (2026) Neurological and behavioural correlates of construal in economic decision-making under cognitive load. *Behavioural Brain Research* [DOI](https://doi.org/10.1016/j.bbr.2025.115829)

de Waard, J., Theeuwes, J. (2026) Beyond top-down: Feature search as a serial clump-wise process. *Cognition* [DOI](https://doi.org/10.1016/j.cognition.2025.106334)

Oletto, C.M., Contemori, G., Cessa, R., Battaglini, L., Bertamini, M. (2026) Foveal masking impairs orientation discrimination of peripheral low-level stimuli. *Heliyon*. [DOI](https://doi.org/10.1016/j.heliyon.2025.e44279)

Zhao, F., Wen, F., Ye, H. et al.  (2026) Dual-identity reminders convey acceptance and trust: dual-identity reminders from opponents and third parties can both promote intergroup reconciliation. *Curr Psychol*. [DOI](https://doi.org/10.1007/s12144-025-08722-x)

Pettini, L., Bogler, C., Doeller, C. et al. (2026) Synthesis and perceptual scaling of high-resolution naturalistic images using Stable Diffusion. *Behav Res*. [DOI](https://doi.org/10.3758/s13428-025-02889-8)

### 2025

Kurdoglu, P., Schwartz, B. L., & Kapucu, A. (2025). Both emotional and neutral contexts increase feeling of knowing judgments despite poorer memory. *Memory*. [DOI](https://doi.org/10.1080/09658211.2025.2610298)

Von Holzen K, Newman RS. (2025) _Ab initio_ word recognition in infant- and adult-directed continuous speech. *Applied Psycholinguistics*. [DOI](https://doi.org/10.1017/S0142716425100350)

Spiering, L., Trier, H.A., O’Reilly, J.X. et al. (2025) Active disambiguation guides inferring controllability and cause in social interactions. *Nat Commun*. [DOI](https://doi.org/10.1038/s41467-025-67853-8)

Banovac, I., Bruton, O.J., Mercado-Díaz, L. et al. (2025) VENturing into machine learning for the morphological analysis of von Economo neurons. *Sci Rep*. [DOI](https://doi.org/10.1038/s41598-025-30470-y)

Loaiza, V. M., Senziani, K., Bartsch, L. M., & Mizrak, E. (2025). What makes a birdbrain tick: Long-term memory drives expertise effects on working memory binding. *Psychology and Aging*. [DOI](https://doi.org/10.1037/pag0000952)

Sarli, L., Cadoux, A., & Justel, N. (2025). L1-L2 valence-specific effects in recall and recognition bias in sequential bilinguals. *Journal of Cognitive Psychology*. [DOI](https://doi.org/10.1080/20445911.2025.2599243)

Kreis, B.K., Hermann, A., Pachur, T., Groß, J. (2025) Hindsight Bias Through Knowledge Updating: A Conceptual Replication of Groß et al. (2023). *Collabra: Psychology* [DOI](https://doi.org/10.1525/collabra.147499)

Lee, J.C., Dang, T., Collins, J.H. (2025) Trait anxiety and fear generalization: Overgeneralization of fear or undergeneralization of safety learning? *Behaviour Research and Therapy* [DOI](https://doi.org/10.1016/j.brat.2025.104939)

Antzaka, A., Li, T., Jevtović, M., & Martin, C. D. (2025). Cross-Linguistic Influences of Orthographic Depth on Written Word Learning in the First and Second Language. *Scientific Studies of Reading*. [DOI](https://doi.org/10.1080/10888438.2025.2595984)

Azer, L., Vanderlip, C.R., Mayer, L.L., Ehlert, L., Sultzer, D., Shin, H-W., Stark, C.E.L. (2025) MST in the Wild: Optimizing the Mnemonic Similarity Task for Use in Diverse Environments. *Neuropsychologia. [DOI](https://doi.org/10.1016/j.neuropsychologia.2025.109341)

Blomberg, M., Oberender, L., Koster, E., Brockmeyer, T. (2025) Transdiagnostic Cognitive Control Training for Patients Waiting for Outpatient Psychotherapy: Randomized Clinical Trial. *JMIR Mhealth Uhealth* [DOI](https://doi.org/10.2196/65867)

Kusztor, A., Mulay, N., Yamada, M., Hohwy, J., Tsuchiya, N. (2025) Lifting the veil: probing altered visual perception in derealization. *Neuroscience of Consciousness* [DOI](https://doi.org/10.1093/nc/niaf045)

Baroncini, I., Michelotti, A., Engemann, H. (2025). Priming motion events in Italian heritage language speakers: Agents and mechanisms of language change. *Linguistic Approaches to Bilingualism*. [DOI](https://www.doi.org/10.1075/lab.24048.bar)

Capkan, E.N., Ozilgen, S., Yildirim, F. (2025) Designing visual menus for a sustainable future: The role of non-meat decoys. *International Journal of Gastronomy and Food Science*. [DOI](https://doi.org/10.1016/j.ijgfs.2025.101343)

Chromý, J., Ceháková, M. & Brand, J. (2025) The HeCz corpus: A large, richly annotated reading corpus of newspaper headlines in Czech. *Behav Res*. [DOI](https://doi.org/10.3758/s13428-025-02863-4)

Chiu, S. L., Toscano, C. M., Toscano, J. C., & McMurray, B. (2025). Listeners rapidly adapt to current conditions: “Good-enough” adaptation in multitalker speech perception. *Journal of Experimental Psychology: General*. [DOI](https://doi.org/10.1037/xge0001797)

Wolpe N, Aymerich C, Jin Y, et al. (2025) Characterising negative symptoms in schizophrenia: CHANSS study protocol. *BJPsych Open*. [DOI](https://doi.org/10.1192/bjo.2025.10880)

Vencato, M., Zorzi, M. & Bonato, M. (2025) Temporal momentum: an online replication and beyond. *Psychological Research*. [DOI](https://doi.org/10.1007/s00426-025-02167-4)

Daiss, F., Jansen, P. (2025) Affective and reflective attitudes toward vegetarian food consumption: the effect of goal priming. *Frontiers in Nutrition*. [DOI](https://www.doi.org/10.3389/fnut.2025.1653935)

Percival, M., Yeung, H., Bird, S., J. Quaysultunaat (Randeana). (2025) Hul'q'umi'num' listening quizzes. Speech perception in a language revitalization classroom context. *Journal of Second Language Pronunciation*. [DOI](https://doi.org/10.1075/jslp.25001.per)

Dutli, J., Oberauer, K., & Bartsch, L. M. (2025). Is repetition learning preserved in old age? Insights from the Hebb paradigm. *Psychology and Aging*.[DOI](https://doi.org/10.1037/pag0000947)

Schreiner, M. R., & Kunde, W. (2025). Integrating action-effect episodes into long-term memory as a function of control. *Journal of Experimental Psychology: Learning, Memory, and Cognition*. [DOI](https://doi.org/10.1037/xlm0001544)

van Moorselaar, D., Theeuwes, J., Van der Stigchel, S. Alpha-Band Activity Tracks Reflexive Changes in the Breadth of the Zoom Lens of Attention. *Journal of Neuroscience*.[DOI](www.doi.org/10.1523/JNEUROSCI.0706-25.2025)

Saccani, M.S., Contemori, G.,Bonato, M. (2025) Unveiling contralesional omissions six years after stroke. Effects of top-down and bottom-up manipulations. *Cortex*. [DOI](https://doi.org/10.1016/j.cortex.2025.09.002)

Bonny, J. W. (2025). Seeing Flames, Perceiving Quantity: Approximations of Fire Intensity Across Development. *Behavioral Sciences*. [DOI](https://doi.org/10.3390/bs15101397)

Muylle, M., & Jarema, G. (2025). The transmission of semantic, lexical, and orthographic information in young and older bilinguals’ typed word production. *Journal of Experimental Psychology: Learning, Memory, and Cognition*. [DOI](https://doi.org/10.1037/xlm0001536)

Pohl, J., Nikolovska K., Maurelli F., Kappas A., Hommel B. (2025) Selfhood-attribution in a social context: further evidence for a Pars-Pro-Toto account. *Frontiers in Psychology*. [DOI](https://www.doi.org/10.3389/fpsyg.2025.1528172)

Beucler, J., Voudouri, A., & De Neys, W. (2025). Moses illusions, fast and slow. *Journal of Experimental Psychology: Learning, Memory, and Cognition*. [DOI](https://doi.org/10.1037/xlm0001530)

Ilksoy, Y. A., van Moorselaar, D., Wang, B., Los, S. A., & Theeuwes, J. (2025). Distractor suppression operates exclusively in retinotopic coordinates. *Journal of Experimental Psychology: Human Perception and Performance*. [DOI](https://doi.org/10.1037/xhp0001375)

Vogt, A., Ganter, I., Kaup, B., Abdel Rahman, R. (2025) Expressing experiences: Sensorimotor activations and interoceptive sensibility influence which words we choose when speaking. *Acta Psychologica*. [DOI](https://doi.org/10.1016/j.actpsy.2025.105498)

Comay, N. A., Solovey, G., & Barttfeld, P. (2025). Decisions are based on less information than metacognitive judgments in multialternative contexts. *Journal of Experimental Psychology: Learning, Memory, and Cognition*. [DOI](https://doi.org/10.1037/xlm0001532)

Delem, M., Turkben, S., Cavalli, E., Cousineau, D., Plancher, G. (2025) Unsupervised clustering reveals spatial and verbal cognitive profiles in aphantasia and typical imagery. *Neuropsychologia* [DOI](https://doi.org/10.1016/j.neuropsychologia.2025.109279)

Galang, C. M., Cracco, E., Chirkov, V., Obhi, S. S., & Brass, M. (2025). Sense of agency during group control. *Journal of Experimental Psychology: General*. [DOI](https://doi.org/10.1037/xge0001829)

Vos M, Minor S, Ramchand G. (2025) The simple past versus perfect in English: evidence from Visual World eye tracking. *English Language and Linguistics*. [DOI](https://doi.org/10.1017/S1360674325100452)

Ford, D., & Nadarevic, L. (2025). Revisiting the Plausibility Effect in Remembering Truth and Falsity: An Analysis of Underlying Memory and Guessing Processes. *Journal of Cognition* [DOI](https://doi.org/10.5334/joc.459)

Aktepe, S.C., Heck, D.W. Revisiting the effect of discrepant perceptual fluency on truth judgments. *Journal of Experimental Social Psychology*. [DOI](https://doi.org/10.1016/j.jesp.2025.104774)

Thorp, S. O., Slupphaug, K. S., Rimol, L. M., Lervik, S., Hoel, S. K. B., & Grassini, S. (2025). Conformity towards humans versus AI in different task domains: the type of task matters. *Journal of Psychology and AI*. [DOI](https://doi.org/10.1080/29974100.2025.2540762)

Conson M, Zappullo I, Cecere R, Thiebaut de Schotten M, Lauro A, Senese VP, et al. (2025) Altercentrism and a change in perspective on the self: The relationships of visuospatial perspective-taking with rumination and mindfulness. *PLoS One*. [DOI](https://doi.org/10.1371/journal.pone.0316060)

Xiao, B., & Wolpe, N. (2025). The value of progress feedback in physical effort-based decision making. *Motivation Science*. [DOI](https://doi.org/10.1037/mot0000411)

Melo, J.C.N., Tejada, J., Silva, E.C.M. et al. (2025) Effects of physically active lessons and active breaks on cognitive performance and health indicators in elementary school children: a cluster randomized trial. *Int J Behav Nutr Phys Act*. [DOI](https://doi.org/10.1186/s12966-025-01789-6)

Yao, J., Snell, J., & Theeuwes, J. (2025). Age-related preservation of statistical learning in distractor suppression. *Psychology and Aging*. [DOI](https://doi.org/10.1037/pag0000922)

De Cesarei, A., Tronelli, V., Mastria, S., Ferrari, V., & Codispoti, M. (2025). Behavioral Interference by Emotional Stimuli: Sequential Modulation by Perceptual Conditions but Not by Emotional Primes. *Vision*. [DOI](https://doi.org/10.3390/vision9030066)

Gastmann, F., Schimke, S., Poarch, G.J. (2025) Conducting psycholinguistic research online: Comparable evidence of second language lexical and sentence-level processing in web-based versus lab-based studies. *Bilingualism: Language and Cognition*. [DOI](https://doi.org/10.1017/S136672892510028X)

Garre-Frutos, F., Lupiáñez, J. & Vadillo, M.A. (2025) Value-modulated attentional capture depends on awareness. *Psychon Bull Rev*. [DOI](https://doi.org/10.3758/s13423-025-02734-1)

Vandendaele, A., & Grainger, J. (2025). On the impact of syntactic and semantic information when processing words in sentences. *Quarterly Journal of Experimental Psychology*. [DOI]( https://doi.org/10.1177/17470218251350584)

Bysouth-Young, D., Guérit, F., Shahidi, L., Carlyon, R.P. (2025) Measurement of Spectro-Temporal Processing by Cochlear Implant Users: Effects of Stimulus Level and Validation of an Online Implementation. *Ear & Hearing* [DOI](http://doi.org/10.1097/AUD.0000000000001676)

Maier, M., Harris, A.J.L., Kellen, D., Singmann, H. (2025) Decision making under extinction risk. *Cognitive Psychology*. [DOI](https://doi.org/10.1016/j.cogpsych.2025.101735).

Raza, S., Schomaker, J., Quent, J. A., Anderson, M. C., & Henson, R. N. (2025). Proactive and retroactive effects of novelty and rest on memory. *Quarterly Journal of Experimental Psychology*. [DOI](https://doi.org/10.1177/17470218251346156)

Ilksoy, Y. A., van Moorselaar, D., Los, S. A., & Theeuwes, J. (2025). Object-centered spatial learning in dynamic contexts: History-driven distractor suppression and target enhancement. *Journal of Experimental Psychology: Human Perception and Performance*. [DOI](https://doi.org/10.1037/xhp0001353)

Bonny, J. W., & Russell, M. D. (2025). The Role of Suppression Performance Information in Judging When to Use a Fire Extinguisher. *Safety*. [DOI](https://doi.org/10.3390/safety11020058)

Coates, Z., Brown, S., & Kelly, M. (2025). Exploring Impacts of Environmentally Focused Imagery on Pro-Environment Behaviours and Climate Anxiety. *Climate*. [DOI](https://doi.org/10.3390/cli13060128)

Atilgan, N., & Nozari, N. (2025). Statistical learning of orthotactic constraints: Evidence from typing. *Journal of Experimental Psychology: Learning, Memory, and Cognition*. [DOI](https://doi.org/10.1037/xlm0001502)

Velnić, M., Slabakova, R., & Dahl, A. (2025). Acquisition of genericity in L2 English: the effect of multilingualism. *International Journal of Multilingualism*. [DOI](https://doi.org/10.1080/14790718.2025.2508854)

Mlinarič, M., Los, S.A. & Snell, J. (2025) On the spatial limits of parallel word processing in reading. *Atten Percept Psychophys*. [DOI](https://doi.org/10.3758/s13414-025-03101-x)

Zacharski, L., Kruppa, A., & Ferstl, E. C. (2025). The Readability of the Non-Binary Gender Star in German: Evidence From a Lexical Decision Task. *Social Psychological Bulletin*. [DOI](https://doi.org/10.32872/spb.13719)

Baroncini, I., Michelotti, A., and Engemann, H. (2025) Priming motion events in Italian heritage language speakers. Agents and mechanisms of language change. *Linguistic Approaches to Bilingualism*. [DOI](https://doi.org/10.1075/lab.24048.bar)

Colombatto, C., Birch, J. & Fleming, S.M. (2025) The influence of mental state attributions on trust in large language models. *Commun Psychol*. [DOI](https://doi.org/10.1038/s44271-025-00262-1)

Fenn, J., Gouret, F., Gorki, M. et al. (2025) Cognitive-affective maps extended logic: Proposing tools to collect and analyze attitudes and belief systems. *Behav Res*. [DOI](https://doi.org/10.3758/s13428-025-02699-y)

González, F., Garre-Frutos, F., Hinojosa-Aguayo, I. et al. (2025) Extinction of outcome-specific Pavlovian-to-instrumental transfer (PIT), instrumental outcome devaluation, and reward-related attentional capture are predicted by affect-driven impulsivity. *Learn Behav*. [DOI](https://doi.org/10.3758/s13420-025-00676-1)

Livoti V., Del Popolo Cristaldi F., Contemori G., Saccani M.S. and Bonato, M. (2025) Web-based assessment of dual-task costs at differentages: an analysis across cognitive domains. *Front. Psychol.* [DOI](https://doi.org/10.3389/fpsyg.2025.1561417) 

Pisu, V., Mehraeen, S., Graf, E. W., Ernst, M. O., & Adams, W. J. (2025). Biases in the perceived area of different shapes: A comprehensive account and model. *Journal of Experimental Psychology: Human Perception and Performance*. [DOI](https://doi.org/10.1037/xhp0001322)

Mento, G., Bariletti, I., Toffoli, L., Granziol, U., Borella, E., & Del Popolo Cristaldi, F. (2025). Adapting cognitive control to local–global implicit temporal predictability: A lifespan investigation from 5 to 88 years old. *Psychology and Aging*. [DOI](https://doi.org/10.1037/pag0000905)

Saccani, M.S., Contemori, G., Del Popolo Cristaldi, F. et al. (2025) Attentional load impacts multisensory integration, without leading to spatial processing asymmetries. *Sci Rep*. [DOI](https://doi.org/10.1038/s41598-025-95717-0)

Ward, M. Z., Bouguettaya, A., & van Zoest, W. (2025). A British understanding of racialised gaze-cueing in the context of implicit racial bias, explicit racial identity and self-esteem. *Quarterly Journal of Experimental Psychology* [DOI](https://doi.org/10.1177/17470218251335304)

Wessel, I., Krans, J., et al. (2025) Evidence That Tetris Reduces Immediate but Not Subsequent Daily Intrusions of a Trauma Film: A Multilab Replication Study. *Collabra: Psychology* [DOI](https://doi.org/10.1525/collabra.130791)

Cooper, P., Lim, A., Irons, J., McGrath, M., Jarvis, H., Duenser, A. (2025) Trust in AI is dynamically updated based on users' expectations. *Proceedings of the Extended Abstracts of the CHI Conference on Human Factors in Computing Systems (CHI EA '25)*. [DOI](https://doi.org/10.1145/3706599.3719870)

Batista, A. R., Folia, V., & Silva, S. (2025). More than a Bundle? Developing Adaptive Guidance for Task Selection in an Online, Semantic-Based Cognitive Stimulation Program. *Brain Sciences*. [DOI](https://doi.org/10.3390/brainsci15040419)

Dome, L., & Wills, A. J. (2025). g-Distance: On the comparison of model and human heterogeneity. *Psychological Review*. [DOI](https://doi.org/10.1037/rev0000550)

Li, C., Frischkorn, G.T., Dames, H., Oberauer, K. (2025) The benefit of removing information from working memory: Increasing available cognitive resources or reducing interference? *Cognition* [DOI](https://doi.org/10.1016/j.cognition.2025.106134)

Galang, C.M., Akan, A., Pfister, R., Brass, M. (2025) Temporal binding during deliberate rule breaking. *Consciousness and Cognition*. [DOI](https://doi.org/10.1016/j.concog.2025.103851)

Laycock, K. and McGowan, K.B. (2025), Removing the Disguise: The Matched Guise Technique, Incongruity, and Listener Awareness. *Journal of Sociolinguistics*. [DOI](https://doi.org/10.1111/josl.12700)

Jansen, P., Haugg, J. & Schroter, F.A. (2025) Explicit and implicit affective attitudes of female athletes towards different body sizes. *BMC Psychol*. [DOI](https://doi.org/10.1186/s40359-025-02567-6)

Bading, K. C., Barth, M., & Rothermund, K. (2025). Evidence for an evaluative effect of stimulus co-occurrence may be inflated by evaluative differences between assimilative and contrastive relations. *Cognition and Emotion*. [DOI](https://doi.org/10.1080/02699931.2025.2460099)

Zapata, J.M., Comay, M.A., Taricco, G., Barttfeld, P., Solovey, G., Saal, A., Ahumada, J.V. (2025) Metacognitive Sensitivity on the Iowa Gambling Task Reveals Awareness as a Necessary Condition for Advantageous Performance. *Experimental Psychology* [DOI](https://doi.org/10.1027/1618-3169/a000636)

Trier, H.A., O’Reilly, J.X., Spiering, L. et al. (2025) Emotions and individual differences shape human foraging under threat. *Nat. Mental Health*. [DOI](https://doi.org/10.1038/s44220-025-00393-8)

Purkart, R., Delem, M., Ranson, V., Andrey, C., Versace, R., Cavalli, E., Plancher, G. (2025) Are there unconscious visual images in aphantasia? Development of an implicit priming paradigm. *Cognition* [DOI](https://doi.org/10.1016/j.cognition.2024.106059)

Bruckner, R., Nassar, M. R., Li, S.-C., & Eppinger, B. (2025). Differences in learning across the lifespan emerge via resource-rational computations. *Psychological Review*. [DOI](https://doi.org/10.1037/rev0000526)

Bading, K. C., Barth, M., & Rothermund, K. (2025). Evidence for an evaluative effect of stimulus co-occurrence may be inflated by evaluative differences between assimilative and contrastive relations. *Cognition and Emotion*. [DOI](https://doi.org/10.1080/02699931.2025.2460099)

Michalareas, G., Lehr, C., Grabenhorst, M. et al. (2025) Social processing distorts physical distance perception. *Sci Rep*. [DOI](https://doi.org/10.1038/s41598-025-89935-9)

Brand J, Preininger M, Kříž A, Ceháková M. Feminine fox, not so feminine box: constraints on linguistic relativity effects for grammatical and conceptual gender. *Language and Cognition*. [DOI](https://doi.org/10.1017/langcog.2025.3)

Mera, Y., Modirrousta-Galian, A., Thomas, G., Higham, P. A., & Seabrooke, T. (2025). Erring on the side of caution: Two failures to replicate the derring effect. *Journal of Experimental Psychology: General*. [DOI](https://doi.org/10.1037/xge0001707)

Belo, J., Clerc, M. & Schon, D. (2025) Attentional Inhibition Ability Predicts Neural Representation During Challenging Auditory Streaming. *Cogn Affect Behav Neurosci*. [DOI](https://doi.org/10.3758/s13415-024-01260-2)

de Waard, J., Theeuwes, J. & Bogaerts, L. (2025) Taking time: Auditory statistical learning benefits from distributed exposure. *Psychon Bull Rev*. [DOI](https://doi.org/10.3758/s13423-024-02634-w)

Büsel, C., Dahm, S.F., Sachse, P. et al. (2025) The role of inhibition in the processing of peripheral cues. *Psychological Research*. [DOI](https://doi.org/10.1007/s00426-024-02073-1)

Winkelmair, A., Schroter, F.A., Jansen, P. Vegetarian and sustainable food consumption behavior: Exploring the relation to explicit and implicit attitudes toward vegetarian foods and dispositional mindfulness. *Appetite*. [DOI](https://doi.org/10.1016/j.appet.2024.107847)

Wainio-Theberge, S., Khoury, B. & Armony, J.L. (2025) Mindfulness Skills and Experience Are Associated With Enhanced Emotional Body Sensations. *Mindfulness*. [DOI](https://doi.org/10.1007/s12671-024-02506-3)

Sousa de Gois, T., Oliveira Freitas, F., Tejada, J., Freitag, R. (2025). NLP and education Using semantic similarity to evaluate filled gaps in a large-scale Cloze test in the classroom. *The Mental Lexicon*. [DOI](https://doi.org/10.1075/ml.24027.deg)

Xu, Z., Theeuwes, J. & Los, S.A. (2025) Statistical learning of spatiotemporal target regularities in the absence of saliency. *Atten Percept Psychophys*. [DOI](https://doi.org/10.3758/s13414-024-02992-6)

### 2024
Borges, P.B., Mueller, J.L. (2024) Interindividual Differences in Higher and Lower-Order Object-Related Cognition: The Role of Inner Speech. *Collabra: Psychology* [DOI](https://doi.org/10.1525/collabra.125128)

Roesler, E., Rieger, T. Langer, M. (2024) Numeric vs. verbal information: The influence of information quantifiability in Human-AI vs. Human-Human decision support, *Computers in Human Behavior: Artificial Humans* [DOI](https://doi.org/10.1016/j.chbah.2024.100116)

Banh N.C., Tünnermann J., Rohlfing K.J., Scharlau, I. (2024) Benefiting from binary negations? Verbal negations decrease visual attention and balance its distribution. *Front. Psychol.* [DOI](http://10.3389/fpsyg.2024.1451309)

Conson, M., Zappullo, I., Cordasco, G., Trojano, L., Raimo, G., Cecere, R., Baiano, C., Lauro, A., & Esposito, A. (2024). Altercentrism in perspective-taking: The role of humanisation in embodying the agent’s point of view. *Quarterly Journal of Experimental Psychology*. [DOI](https://doi.org/10.1177/17470218241300252)

Pucci, V., Contemori, G., Saccani, M.S. et al. (2024) Auto-Global Examination of Mental State (Auto-GEMS): a web-based self-administered cognitive screening. *Aging Clin Exp Res*. [DOI](https://doi.org/10.1007/s40520-024-02862-z)

Wiradhany, W., Pócs, A., Baumgartner, S.E. (2024) Are Social Media Notifications Distracting? *Experimental Psychology* [DOI](https://doi.org/10.1027/1618-3169/a000625)

Russell, M.D., Bonny, J.W., Reed, R. (2024) Impact of Virtual Reality on Decision-Making and Risk Assessment During Simulated Residential Fire Scenarios. *Fire* [DOI](https://doi.org/10.3390/fire7120427)

Nakamura, S., Kobayashi, M. (2024) Examining psychological detachment from work, work engagement, and thought control in Japanese work at home environments. *Discov Psychol* [DOi](https://doi.org/10.1007/s44202-024-00291-7)

Duncan, D.H., van Moorselaar, D. & Theeuwes, J. (2024) Visual statistical learning requires attention. *Psychon Bull Rev* [DOI](https://doi.org/10.3758/s13423-024-02605-1)

Hasenäcker, J., & Domahs, F. (2024). EXPRESS: Same same but different – The graded influence of vowel quality and prosodic prominence on letter detection. *Quarterly Journal of Experimental Psychology*. [DOI](https://doi.org/10.1177/17470218241293742)

Godwin, H. J., Liversedge, S. P., Mestry, N., Dewis, H., & Donnelly, N. (2024). Time on task effects during interactive visual search. *Journal of Experimental Psychology: Applied*. [DOI](https://doi.org/10.1037/xap0000521)

Schreiner, M.R., Feustel, S. & Kunde, W. (2024) Linking actions and memories: Probing the interplay of action-effect congruency, agency experience, and recognition memory. *Mem Cogn*. [DOI](https://doi.org/10.3758/s13421-024-01644-2)

de Valério de Arruda, M., Reyes, M. B., das Neves, S. F., Herrmann, F., Verzili, B., & Galduróz, R. F. (2024). Temporal bisection task as a predictor of cognitive deficits. *European Journal of Neuroscience*. [DOI](https://doi.org/10.1111/ejn.16554)

Xu, X., Zhu, Z., Zheng, X. et al. (2024) Temporal asymmetries in inferring unobserved past and future events. *Nat Commun*. [DOI](https://doi.org/10.1038/s41467-024-52627-5)

Wainio-Theberge, S., & Armony, J. L. (2024). Differences in natural standing posture are associated with antisocial and manipulative personality traits. *Journal of Personality and Social Psychology*. [DOI](https://doi.org/10.1037/pspp0000515)

Embon, I., Gerbaudo, M.A., Usaj, A.R. et al. (2024) Exploring the relationship between dysfunctional personality traits with metacognition and confidence. *Curr Psychol*. [DOI](https://doi.org/10.1007/s12144-024-06669-z)

Di Ponzio, M., Battaglini, L., Bertamini, M. et al. (2024) Behavioural stochastic resonance across the lifespan. *Cogn Affect Behav Neurosci* [DOI](https://doi.org/10.3758/s13415-024-01220-w)

Caudrelier, T., Ménard, L. Beausoleil, M.M., Martin, C.D., Samuel, A.G. (2024) When Jack isn’t Jacques: Simultaneous opposite language-specific speech perceptual learning in French–English bilinguals. *PNAS Nexus* [DOI](https://doi.org/10.1093/pnasnexus/pgae354)

Shum, Y.H., Galang, C.M.,Brass, M. (2024) Using a Veto paradigm to investigate the decision models in explaining Libet-style experiments. *Consciousness and Cognition* [DOI](https://doi.org/10.1016/j.concog.2024.103732)

Kim, M., Kim, K.I. & Kim, H. (2024) Self-interest overrides rank-reversal aversion in resource distribution. *Sci Rep*. [DOI](https://doi.org/10.1038/s41598-024-70225-9)

Bonny, J.W., Hussain, Z., Russell, M.D., Trouvé A., Milke J.A. (2024) Simulated fire video collection for advancing understanding of human behavior in building fires. *Frontiers in Psychology*. [DOI](https://doi.org/10.3389/fpsyg.2024.1438020)

Duncan, D. H., & Theeuwes, J. (2024). Secondary capture: Salience information persistently drives attentional selection. *Journal of Experimental Psychology: Human Perception and Performance*. [DOI](https://doi.org/10.1037/xhp0001223)

Li, AS., van Moorselaar, D. & Theeuwes, J. (2024) Attending is not enough: Responding to targets is needed for across-trial statistical learning. *Atten Percept Psychophys*. [DOI](https://doi.org/10.3758/s13414-024-02952-0)

Pithayarungsarit, P., Rieger, T., Onnasch, L., & Roesler, E. (2024). The Pop-Out Effect of Rarer Occurring Stimuli Shapes the Effectiveness of AI Explainability. *Proceedings of the Human Factors and Ergonomics Society Annual Meeting*. [DOI](https://doi.org/10.1177/10711813241261284)

zu Putlitz, J., & Roesler, E. (2024). Let’s Get Physical: The Influence of Embodiment on Industrial Human-Robot Interaction. *Proceedings of the Human Factors and Ergonomics Society Annual Meeting* [DOI](https://doi.org/10.1177/10711813241264206)

Brouwer, J., van den Berg, F., Knooihuizen, R., Loerts, H., & Keijzer, M. (2024). The effects of language learning on cognitive functioning and psychosocial well-being in cognitively healthy older adults: A semi-blind randomized controlled trial. *Aging, Neuropsychology, and Cognition*. [DOI](https://doi.org/10.1080/13825585.2024.2384107)

Frugarello, P., Rusconi, E., Job, R. (2024) The label-feedback effect is influenced by target category in visual search. *PLoS ONE*. [DOI](https://doi.org/10.1371/journal.pone.0306736)

Bauer, R., Jansen, P. (2024) A short mindfulness induction might increase women’s mental rotation performance. *Consciousness and Cognition* [DOI](https://doi.org/10.1016/j.concog.2024.103721)

Xue, S., Gao, X., Wu, Y., Sun, J., Yang, W., Li, X., Ke, S., Yang, L., Jin, H., & Chen, S. (2024). Effects of Theme, Form, and Language on Poetry Reading: Evidence From Chinese ESL Learners. *Empirical Studies of the Arts*. [DOI](https://doi.org/10.1177/02762374241265866)

Niedernhuber M, Streicher J, Leggenhager B, Bekinschtein TA. (2024) Attention and Interoception Alter Perceptual and Neural Pain Signatures-A Case Study. *J Pain Res*. [DOI](https://doi.org/10.2147/JPR.S449173)

Schmerwitz, C., Kopp, B. (2024) The future of neuropsychology is digital, theory-driven, and Bayesian: a paradigmatic study of cognitive flexibility. *Frontiers in Psychology* [DOI](https://www.frontiersin.org/journals/psychology/articles/10.3389/fpsyg.2024.1437192)

Loaiza, V.M., Souza, A.S. (2024) Active maintenance in working memory reinforces bindings for future retrieval from episodic long-term memory. *Mem Cogn.* [DOI](https://doi.org/10.3758/s13421-024-01596-7)

Winkelmair, A., Jansen, P. (2024) Can a mindfulness-based training influence explicit and implicit attitudes, as well as sustainable nutrition behaviors, particularly in relation to vegetarianism?. *Appetite* [DOI](https://doi.org/10.1016/j.appet.2024.107554)

Contemori G., Saccani M.S., Bonato M. (2024) Cognitive-Cognitive Dual-task in aging: A cross-sectional online study. PLoS ONE. [DOI](https://doi.org/10.1371/journal.pone.0302152)

Gemignani, M., Giannotti, M., Rigo, P. et al. (2024) Neither Parents’ Sex Nor the Type of Family Modulates Attentional Bias Toward Infant Faces: A Preliminary Study in Different-Sex and Same-Sex Parents. *Arch Sex Behav*. [DOI](https://doi.org/10.1007/s10508-024-02875-9)

Curzel, F., Osiurak, F., Trân, E., Tillmann, B. Ripollés, P., Ferreri, L. (2024) Increased pleasure positively influences prosocial behavior and memory outcomes. *iScience* [DOI](https://doi.org/10.1016/j.isci.2024.109964)

Berkovich, R., & Meiran, N. (2024). Both pleasant and unpleasant emotional feelings follow Weber’s law but it depends how you ask. *Emotion* [DOI](https://doi.org/10.1037/emo0001343)

Oz-Cohen, E., Berkovich, R. & Meiran, N. (2024) Bumpy ride ahead: Anticipated effort as emotional evidence?. *Cogn Affect Behav Neurosci*. [DOI](https://doi.org/10.3758/s13415-024-01194-9)

van Moorselaar, D., & Theeuwes, J. (2024). Transfer of statistical learning between tasks. *Journal of Experimental Psychology: Human Perception and Performance*. [DOI](https://doi.org/10.1037/xhp0001216)

Morriss, J., Lee, C.E., Wood, A. et al. (2024) Attentional bias to uncertainty-based information: a conceptual replication of Fergus et al. (2013). *Curr Psychol* [DOI](https://doi.org/10.1007/s12144-024-06067-5)

Berry, C. J., & Shanks, D. R. (2024). Everyday amnesia: Residual memory for high confidence misses and implications for decision models of recognition. *Journal of Experimental Psychology: General* [DOI](https://doi.org/10.1037/xge0001599)

Salava, A. Salmela, V. (2024) Diagnostic errors during perceptual learning in dermatology: a prospective cohort study of Finnish undergraduate students. *Clinical and Experimental Dermatology*. [DOI](https://doi.org/10.1093/ced/llae063)

Béna, J., Lacassagne, D., & Corneille, O. (2024). EXPRESS: Do Uncontrolled Processes Contribute to Evaluative Learning? Insights From a New Two-US Process Dissociation Procedure and Ambivalence Measures. *Quarterly Journal of Experimental Psychology* [DOI](https://doi.org/10.1177/17470218241248138)

Chan, Y. Y., Lee, J. C., Fam, J. P., Westbrook, R. F., & Holmes, N. M. (2024). The role of uncertainty in regulating associative change. *Journal of Experimental Psychology: Animal Learning and Cognition* [DOI](https://doi.org/10.1037/xan0000375)

Xu, H., Armony, J.L. (2024) Arousal level and exemplar variability of emotional face and voice encoding influence expression-independent identity recognition. *Motiv Emot* [DOI](https://doi.org/10.1007/s11031-024-10066-1)

Theeuwes, L., Snell, L., Koning, T., Bucker, B. (2024) Self-Explaining Roads: Effects of road design on speed choice *Transportation Research Part F: Traffic Psychology and Behaviour* [DOI](https://doi.org/10.1016/j.trf.2024.03.007)

Sulpizio, S., Spinelli, G. & Scaltritti, M. (2024) Semantic Stroop interference is modulated by the availability of executive resources: Insights from delta-plot analyses and cognitive load manipulation. *Mem Cogn*. [DOi](https://doi.org/10.3758/s13421-024-01552-5)

Liapi, A., Silva, S., Folia, V. (2024) Duration Perception and Reading in Typically Developing Adults and Adults with Developmental Dyslexia: Implications for Assessment and Intervention. *Eur. J. Investig. Health Psychol. Educ.* [DOI](https://doi.org/10.3390/ejihpe14030046)

Sidhu, A., Uiga, L., Langley, B. et al. (2024) Reduced influence of perceptual context in mild traumatic brain injury is not an illusion. *Sci Rep* [DOI](https://doi.org/10.1038/s41598-024-56713-y)

Smith, A.J., Bisby, J.A., Dercon, Q. et al. (2024) Hot metacognition: poorer metacognitive efficiency following acute but not traumatic stress. *Transl Psychiatry* [DOI](https://doi.org/10.1038/s41398-024-02840-z)

Grignolio, D., Acunzo, D. J., & Hickey, C. (2024). Object-based attention is accentuated by object reward association. *Journal of Experimental Psychology: Human Perception and Performance* [DOI](https://doi.org/10.1037/xhp0001177)

Vainre M, Dalgleish T, Watson P, et al Work Engagement and Well-being Study (SWELL): a randomised controlled feasibility trial evaluating the effects of mindfulness versus light physical exercise at work. *BMJ Ment Health*. [DOI](https://doi.org/10.1136/bmjment-2023-300885)

Nguyen, N., Lancia, L., Huttner, L., Schwartz, J., & Diard, J. (2024). Listeners' convergence towards an artificial agent in a joint phoneme categorization task. *Glossa Psycholinguistics*. [DOI](http://dx.doi.org/10.5070/G6011165)

Theeuwes, J., Huang, C., Frings, C., & van Moorselaar, D. (2024). Statistical learning of motor preparation. *Journal of Experimental Psychology: Human Perception and Performance*. [DOI](https://doi.org/10.1037/xhp0001174)

Corradi G, Aguilar P, Aguiar F, Olivera-La Rosa A (2024) Age and moral disgust: An experimental priming effects vignette study. *PLoS ONE* [DOI](https://doi.org/10.1371/journal.pone.0295039)

Del Popolo Cristaldi F., Buodo G., Gambarota F., Oosterwijk S., Mento G. (2024) How previous experience shapes future affective subjective ratings: A follow-up study investigating implicit learning and cue ambiguity. *PLoS ONE* [DOI](https://doi.org/10.1371/journal.pone.0297954)

Bognar, M., Szekely, Z., Varga, M.A. et al. (2024 )Cognitive control adjustments are dependent on the level of conflict. *Sci Rep* [DOI](https://doi.org/10.1038/s41598-024-53090-4)

van Moorselaar D, Theeuwes J. (2024) Spatial transfer of object-based statistical learning. *Atten Percept Psychophys* [DOI](http://doi.org/10.3758/s13414-024-02852-3)

Lallement, C., Lemaire, P. (2024) Are There Age-Related Differences in Effects of Positive and Negative Emotions in Arithmetic? *Experimental Psychology* [DOI](https://doi.org/10.1027/1618-3169/a000595)

Vandendaele, A., Prutean, N. and Declerck, M. (2024). A Blessing in Disguise: Flanking Words Can Cancel Language Switch Costs.  *Journal of Cognition* [DOI](https://doi.org/10.5334/joc.332)

Moore, C.M., Zheng, Q. (2024) Limited midlevel mediation of visual crowding: Surface completion fails to support uncrowding. *Journal of Vision* [DOI](https://doi.org/10.1167/jov.24.1.11)

Oppenheim, G.M., Nozari, N. (2024) Similarity-induced interference or facilitation in language production reflects representation, not selection. *Cognition* [DOI](https://doi.org/10.1016/j.cognition.2024.105720)

Soto, D., Salazar, A., Elosegi, P. et al. (2024) A novel image database for social concepts reveals preference biases in autistic spectrum in adults and children. *Psychon Bull Rev* [DOI](https://doi.org/10.3758/s13423-023-02443-7)

Martin, C.D., Pastureau, R., Kerr, E. and de Bruin, A. (2024) Processing of Synonyms and Homographs in Bilingual and Monolingual Speakers.  *Journal of Cognition* [DOI](https://doi.org/10.5334/joc.329)

Grootswagers T, Robinson AK, Shatek SM, Carlson TA (2024) Mapping the dynamics of visual feature coding: Insights into perception and integration. *PLoS Comput Biol* [DOI](https://doi.org/10.1371/journal.pcbi.1011760)

Garre-Frutos, F., Vadillo, M.A., González, F. et al. (2024) On the reliability of value-modulated attentional capture: An online replication and multiverse analysis. *Behav Res*. [DOI](https://doi.org/10.3758/s13428-023-02329-5)

Mu, Y., Schubö, A. & Tünnermann, J. (2024) Adapting attentional control settings in a shape-changing environment. *Atten Percept Psychophys*. [DOI](https://doi.org/10.3758/s13414-023-02818-x)

Shyr, M.C., Joshi, S.S. (2024) A Case Study of the Validity of Web-based Visuomotor Rotation Experiments. *J Cogn Neurosci* [DOI](https://doi.org/10.1162/jocn_a_02080)

### 2023
Yang, W., and Rauwolf, P., Frances, C., Wei, Y., Molina-Nieto, O., Duñabeitia, J.A., Thierry, G. (2023) Evidence for Strategic Language Use in Chinese-English Bilinguals. *SSRN* [DOI](http://dx.doi.org/10.2139/ssrn.4396191)


Berkovich, R., & Meiran, N. (2023). Pleasant emotional feelings follow one of the most basic psychophysical laws (weber’s law) as most sensations do. *Emotion* [DOI](https://doi.org/10.1037/emo0001161)

Del Popolo Cristaldi, F., Gambarota, F., & Oosterwijk, S. (2023). Does your past define you? The role of previous visual experience in subjective reactions to new affective pictures and sounds. *Emotion* [DOI](https://doi.org/10.1037/emo0001168)

Barnes, L., Rangelov, D., Mattingley, J. B., & Woolgar, A. (2023). Fractionating distraction: How past- and future-relevant distractors influence integrated decisions. *Journal of Experimental Psychology: Human Perception and Performance*. [DOI](https://doi.org/10.1037/xhp0001081)

Modirrousta-Galian, A., Higham, P. A., & Seabrooke, T. (2023). Effects of inductive learning and gamification on news veracity discernment. *Journal of Experimental Psychology: Applied*. [DOI](https://doi.org/10.1037/xap0000458)

Curzel, F., Carraturo, G., Ripollés, P., & Ferreri, L. (2023). Better off alone? When sharing music reduces pleasure responses. *Advances in Cognitive Psychology*. [DOI](https://doi.org/10.5709/acp-0400-6)

Fahnenstich, H., Rieger, T., Roesler, E. (2023). Trusting under risk – comparing human to AI decision support agents. *Computers in Human Behavior* [DOI](https://doi.org/10.1016/j.chb.2023.108107)

Smith, H. J., Gilbert, R. A., & Davis, M. H. (2023). Can speech perception deficits cause phonological impairments? Evidence from short-term memory for ambiguous speech. *Journal of Experimental Psychology: General* [DOI](https://doi.org/10.1037/xge0001522)

Godwin, H.J., Hout, M.C. (2023) Just say ‘I don’t know’: Understanding information stagnation during a highly ambiguous visual search task. *PLoS ONE*. [DOI](https://doi.org/10.1371/journal.pone.0295669)

Palmer, C. J., Kim, P., & Clifford, C. W. G. (2023). Gaze behavior as a visual cue to animacy. *Journal of Experimental Psychology: General*. [DOI](https://doi.org/10.1037/xge0001281)

Gurunandan, K., Cooper, E., Tibon, R., Henson, R.N., & Greve, A. (2023) No evidence of fast mapping in healthy adults using an implicit memory measure: failures to replicate the lexical competition results of Coutanche and Thompson-Schill (2014). *Memory*. [DOI](https://doi.org/10.1080/09658211.2023.2262188)

Hsieh, J.Y.J., Boyce, W.P., Goddard, E. et al. (2023) Colour information biases facial age estimation and reduces inter-observer variability. *Sci Rep*. [DOI](https://doi.org/10.1038/s41598-023-39902-z)

Wang, X., Li, X., Yin, Z., Wu, Y., & Liu, J. (2023). Emotional intelligence of Large Language Models. *Journal of Pacific Rim Psychology*. [DOI](https://doi.org/10.1177/18344909231213958)

Marks, R.A., Eggleston, R., Kovelman, I. (2023) Brain bases of morphological awareness and longitudinal word reading outcomes. *Journal of Experimental Child Psychology*. [DOI](https://doi.org/10.1016/j.jecp.2023.105802)

Magnabosco, F., Hauk, O. (2023) An eye on semantics: a study on the influence of concreteness and predictability on early fixation durations. *Language, Cognition and Neuroscience*. [DOI](www.doi.org/10.1080/23273798.2023.2274558)

Oberholzer, Y., Olschewski, S., Scheibehenne, B. Complexity Aversion in Risky Choices and Valuations: Moderators and Possible Causes. *Journal of Economic Psychology*. [DOI](https://doi.org/10.1016/j.joep.2023.102681).

Loaiza, V.M., Cheung, H.W. & Goldenhaus-Manning, D.T. (2023) What you don’t know can’t hurt you: Retro-cues benefit working memory regardless of prior knowledge in long-term memory. *Psychon Bull Rev*. [DOI](https://doi.org/10.3758/s13423-023-02408-w)

Everhardt, M.K., Sarampalis, A., Coler, M., Başkent, D. Lowie, W. (2023) Prosodic Focus Interpretation in Spectrotemporally Degraded Speech by Non-Native Listeners. *Journal of Speech, Language, and Hearing Research* [DOI](https://doi.org/10.1044/2023_JSLHR-22-00568)

Schreiner, M. R., Bröder, A., & Meiser, T. (2023). Agency effects on the binding of event elements in episodic memory. *Quarterly Journal of Experimental Psychology* [DOI](https://doi.org/10.1177/17470218231203951)

Rieger, T., Manzey, D., Meussling, B., Onnasch, L., Roesler, E. (2023) Be careful what you explain: Benefits and costs of explainable AI in a simulated medical task. *Computers in Human Behavior: Artificial Humans*. [DOI](https://doi.org/10.1016/j.chbah.2023.100021)

Peterson, L.M., Susilo, T., Clifford, C.G.W., Palmer, C.J. (2023) Discrimination of facial identity based on simple contrast patterns generated by shading and shadows. *Vision Research*. [DOI](https://doi.org/10.1016/j.visres.2023.108307)

Peterson, L.M., Clifford, C.W.G., Palmer, C.J. (2023) Detection of Mooney faces is robust to image asymmetries produced by illumination. *Journal of Vision* [DOI](https://doi.org/10.1167/jov.23.12.9)

Gemignani, M., Giannotti, M., Rigo, P., de Falco, S. (2023) Attentional bias to infant faces might be associated with previous care experiences and involvement in childcare in same-sex mothers. *International Journal of Clinical and Health Psychology* [DOI](https://doi.org/10.1016/j.ijchp.2023.100419)

Schreiner, M.R., Hütter, M. (2023) The Influence of Social Status on Memory: No Evidence for Effects of Social Status on Event Element Binding. *Social Cognition*  [DOI](https://doi.org/10.1521/soco.2023.41.5.447)

Vandendaele, A., & Grainger, J. (2023). Lexical competition in the flankers task revised. *PLoS one* [DOI](https://doi.org/10.1371/journal.pone.0285292)

Labaronne, M., Ferreri, L. & Plancher, G. (2023) How do intentions modulate the effect of working memory on long-term memory? *Psychon Bull Rev*. [DOI](https://doi.org/10.3758/s13423-023-02381-4)

Béna, J., Rouard, M., & Corneille, O. (2023). You won't believe it! Truth judgments for clickbait headlines benefit (but less so) from prior exposure. *Applied Cognitive Psychology* [DOI](https://doi.org/10.1002/acp.4134)

Constant, M., Pereira, M., Faivre, N. et al. (2023) Prior information differentially affects discrimination decisions and subjective confidence reports. *Nat Commun*. [DOI](https://doi.org/10.1038/s41467-023-41112-0)

Jost, L., & Jansen, P. (2023). EXPRESS: The Influence of the Design of Mental Rotation Trials on Performance and Possible Differences Between Sexes: A Theoretical Review and Experimental Investigation. *Quarterly Journal of Experimental Psychology*. [DOI](https://doi.org/10.1177/17470218231200127)

Rieger, T., Kugler, L., Manzey, D., & Roesler, E. (2023). The (Im)perfect Automation Schema: Who Is Trusted More, Automated or Human Decision Support? *Human Factors*. [DOI](https://doi.org/10.1177/00187208231197347)

Everhardt, M.K., Sarampalis, A., Coler, M., Başkent, D., & Lowie, W. (2023). Prosodic Focus Interpretation in Spectrotemporally Degraded Speech by Non-Native Listeners. *Journal of Speech, Language, and Hearing Research. [DOI](https://doi.org/10.1044/2023_JSLHR-22-00568)

Vieth, E., von Stockhausen, L. (2023) Effects of short mindful breathing meditations on executive functioning in two randomized controlled double-blinded experiments. *Acta Psychologica* [DOI](https://doi.org/10.1016/j.actpsy.2023.104006)

Sobczak, A., Bunzeck, N. (2023) Effects of positive and negative social feedback on motivation, evaluative learning, and socio-emotional processing. *npj Sci. Learn.* [DOI](https://doi.org/10.1038/s41539-023-00178-7)

Coy, N., Bendixen, A., Grimm, S. et al. (2023) Deviants violating higher-order auditory regularities can become predictive and facilitate behaviour. *Atten Percept Psychophys*. [DOI](https://doi.org/10.3758/s13414-023-02763-9)

Ivanov, Y., Theeuwes, J. & Bogaerts, L. (2023) Reliability of individual differences in distractor suppression driven by statistical learning. *Behav Res*. [DOI](https://doi.org/10.3758/s13428-023-02157-7)

Wang-Ly, Nathan and Newell, Ben R. (2023) Uncertain goals and savings adequacy: Contrasting economic and psychological perspectives. *SSRN* [DOI](http://dx.doi.org/10.2139/ssrn.4511291)

Putra, K.A., Prasetio C.E., & Sianipar, A. (2023) Inhibition on irrelevant negative information alleviates the mediating role of psychological distress in the association between trait rumination and symptoms of depression and anxiety. *Cogent Psychology* [DOI](http://doi.org/10.1080/23311908.2023.2228556)

de Waard, J., van Moorselaar, D., Bogaerts, L. et al. (2023) Statistical learning of distractor locations is dependent on task context. *Sci Rep* [DOI](https://doi.org/10.1038/s41598-023-38261-z)

Prasetio, C.E., Putri, V.M. and Sianipar, A. (2023), The Moderating Role of Inhibition on Irrelevant Emotional Information in the Relation of Cognitive Reappraisal and Affect Balance: Evidence from a Negative Affective Priming Task. *Jpn Psychol Res.* [DOI](https://doi.org/10.1111/jpr.12465) 

Jansen, P., Rahe, M., Hoja, S. et al. (2023) Are Character Strengths and Attitudes towards Vegetarian Food Related? *Int J Appl Posit Psychol*. [DOI](https://doi.org/10.1007/s41042-023-00104-7)

Kahan, T.A., Smith, Z.P. (2023) Effects of alerting signals on the spatial Stroop effect: evidence for modality differences. *Psychological Research*. [DOI](https://doi.org/10.1007/s00426-023-01846-4)

Liao, MR., Grindell, J.D. & Anderson, B.A. (2023) A comparison of mental imagery and perceptual cueing across domains of attention. *Atten Percept Psychophys*. [DOI](https://doi.org/10.3758/s13414-023-02747-9)

Büsel, C., Seiz, C. M., Hoffmann, A., Sachse, P., & Ansorge, U. (2023). EXPRESS: Swift Attenuation of Irrelevant Features Through Feature Consistency – Evidence From a Capture-Probe Version of the Contingent-Capture Protocol. *Quarterly Journal of Experimental Psychology* [DOI](https://doi.org/10.1177/17470218231186045)

Xie, T., Fu, S. & Mento, G. (2023) Faces do not guide attention in an object-based facilitation manner. *Atten Percept Psychophys*. [DOI](https://doi.org/10.3758/s13414-023-02742-0)

Ziereis, A., Schacht, A. (2023) Motivated attention and task relevance in the processing of cross-modally associated faces: Behavioral and electrophysiological evidence. *Cogn Affect Behav Neurosci*. [DOI](https://doi.org/10.3758/s13415-023-01112-5)

Winkelmair, A., Siebertz, M., Jost, L. et al. (203) Explicit and Implicit Affective Attitudes toward Sustainability: The Role of Mindfulness, Heartfulness, Connectedness to Nature and Prosocialness. *Int J Appl Posit Psychol* [DOI](https://doi.org/10.1007/s41042-023-00107-4)

Mazor, M., Maimon-Mor, R.O., Charles, L. et al.  (2023) Paradoxical evidence weighting in confidence judgments for detection and discrimination. *Atten Percept Psychophys.* [DOI](https://doi.org/10.3758/s13414-023-02710-8)

Thoma, D., Becker, K., & Kißler, A. (2023). Presuppositions are more persuasive than assertions if addressees accommodate them: Experimental evidence for philosophical reasoning. *Applied Psycholinguistics*. [DOI](https://doi.org/10.1017/S0142716423000292)

Rullo, M., Presaghi, F., Baldner, C., Livi, S., & Butera, F. (2023). Omertà in intragroup cheating: The role of ingroup identity in dishonesty and whistleblowing. Group Processes & Intergroup Relations. [DOI](https://doi.org/10.1177/13684302231164722)

Hasenäcker, J., & Domahs, F. (2023). Prosody affects visual perception in polysyllabic words: Evidence from a letter search task. *Quarterly Journal of Experimental Psychology*. [DOI](https://doi.org/10.1177/17470218231176691)

Fenn J., Helm J.F., Höfele P., Kulbe L., Ernst A., Kiesel A. (2023) Identifying key-psychological factors influencing the acceptance of yet emerging technologies–A multi-method-approach to inform climate policy. *PLOS Clim* [DOI](https://doi.org/10.1371/journal.pclm.0000207)

Gao, Y., de Waard, J. & Theeuwes, J. (2023) Learning to suppress a location is configuration-dependent. *Atten Percept Psychophys* [DOI](https://doi.org/10.3758/s13414-023-02732-2)

Homann, L.A., Drody, A.C. & Smilek, D. (2023) The effects of self-selected background music and task difficulty on task engagement and performance in a visual vigilance task. *Psychological Research* [DOI](https://doi.org/10.1007/s00426-023-01836-6)

Ng, D. W., Lee, J. C., & Lovibond, P. F. (2023). Unidirectional rating scales overestimate the illusory causation phenomenon. *Quarterly Journal of Experimental Psychology* [DOI](https://doi.org/10.1177/17470218231175003)

Arslan, B., Ng, F., Göksun, T., & Nozari, N. (2023). Trust my gesture or my word: How do listeners choose the information channel during communication? *Journal of Experimental Psychology: Learning, Memory, and Cognition* [DOI](https://doi.org/10.1037/xlm0001253)

Fromm, S.P., Wieland, L., Klettke, A., Nassar, M.R., Katthagen, T., Markett, S., Heinz, A., Schlagenhauf, F. (2023) Computational mechanisms of belief updating in relation to psychotic-like experiences. *Front. Psychiatry* [DOI](https://doi.org/10.3389/fpsyt.2023.1170168)

Comay, N.A., Della Bella, G., Lamberti, P., Sigman, M. Solovey, G., Barttfeld, P. (2023) The presence of irrelevant alternatives paradoxically increases confidence in perceptual decisions. *Cognition* [DOI](https://doi.org/10.1016/j.cognition.2023.105377)

Tian, J., Ren,  K., Gunderson, EA. (2023) Verbal labels influence children's processing of decimal magnitudes. *Journal of Applied Developmental Psychology* [DOI](https://doi.org/10.1016/j.appdev.2023.101537)

Bognar, M., Gyurkovics, M., van Steenbergen, H. & Aczel, B. (2023) Phasic affective signals by themselves do not regulate cognitive control. *Cognition and Emotion* [DOI](https://doi.org/10.1080/02699931.2023.2191172)

Huang, C., Donk, M. & Theeuwes, J. (2023) Attentional suppression is in place before display onset. Atten Percept Psychophys. [DOI](https://doi.org/10.3758/s13414-023-02704-6)

Salava, A, Salmela, V. (2023) Perceptual learning in dermatology—A Finnish cohort study of undergraduate medical students. *J Eur Acad Dermatol Venereol.* [DOI](https://doi.org/10.1111/jdv.19058)

Béna, J., Mierop, A., Bancu, D. Unkelbach, C., Corneille, O. The Role of Valence Matching in the Truth-by-Repetition Effect. *Social Cognition* [DOI](http://dx.doi.org/10.1521/soco.2023.41.2.193)

Embon, I., Cukier, S., Iorio, A., Barttfeld, P., Solovey, G. Is visual metacognition associated with autistic traits? A regression analysis shows no link between visual metacognition and Autism-Spectrum Quotient scores. *Consciousness and Cognition* [DOI](https://doi.org/10.1016/j.concog.2023.103502)

Yan, N., Grindell, J., & Anderson, B. A. (2023). Encoding history enhances working memory encoding: Evidence from attribute amnesia. *Journal of Experimental Psychology: Human Perception and Performance* [DOI](https://doi.org/10.1037/xhp0001096)

Dijkstra, N., Fleming, S.M. (2023) Subjective signal strength distinguishes reality from imagination. *Nat Commun* [DOI](https://doi.org/10.1038/s41467-023-37322-1)

Guseva,  M., Bogler, C., Allefeld C., Haynes JD. (2023) Instruction effects on randomness in sequence generation. *Frontiers in Psychology*. [DOI](https://doi.org/10.3389/fpsyg.2023.1113654)	

van Moorselaar, D., & Theeuwes, J. (2023). Statistical Learning Within Objects. *Psychological Science* [DOI](https://doi.org/10.1177/09567976231154804)

Lu, Z., van Zoest, W. (2023) Combining social cues in attention: Looking at gaze, head, and pointing cues. *Atten Percept Psychophys*. [DOI](https://doi.org/10.3758/s13414-023-02669-6)

Del Popolo Cristaldi F, Toffoli L, Duma GM, Mento G (2023) Little fast, little slow, should I stay or should I go? Adapting cognitive control to local-global temporal prediction across typical development. *PLoS ONE* [DOI](https://doi.org/10.1371/journal.pone.0281417)

Li, AS., Bogaerts, L. & Theeuwes, J. (2023) No evidence for spatial suppression due to across-trial distractor learning in visual search. *Atten Percept Psychophys*. [DOI](https://doi.org/10.3758/s13414-023-02667-8)

Reichardt, R., Polner, B., & Simor, P. (2023). Influencing prior knowledge through a short reading impacts curiosity and learning. *Applied Cognitive Psychology* [DOI](https://doi.org/10.1002/acp.4047)

Guediche, S., Navarra-Barindelli, E., Martin, C.D. (2023). Noise Modulates Crosslinguistic Effects on Second-Language Auditory Word Recognition. *Journal of speech, language, and hearing research* [DOI](https://doi.org/10.1044/2022_JSLHR-22-00368)

Goldenhaus-Manning, D.T., Cooper, N.R. & Loaiza, V.M. (2023) Examining the role of attention during feature binding in visuospatial working memory. *Atten Percept Psychophys*. [DOI](https://doi.org/10.3758/s13414-023-02655-y)

Stark C.E.L., Noche J.A., Ebersberger J.R., Mayer L., Stark S.M. (2023) Optimizing the mnemonic similarity task for efficient, widespread use. *Frontiers in Behavioral Neuroscience* [DOI](https://doi.org/10.3389/fnbeh.2023.1080366)

Lee, M.D., Stark, C.E.L. (2023) Bayesian modeling of the Mnemonic Similarity Task using multinomial processing trees. *Behaviormetrika* [DOI](https://doi.org/10.1007/s41237-023-00193-3)

Kessler, Y., Zilberman, N., & Kvitelashvili, S. (2023). Updating, Fast and Slow: Items, but Not Item-Context Bindings, are Quickly Updated Into Working Memory as Part of Response Selection. *Journal of Cognition* [DOI](http://doi.org/10.5334/joc.257)

Jevtović, M., Antzaka, A., & Martin, C. D. (2023). Déjà-lu: When Orthographic Representations are Generated in the Absence of Orthography. *Journal of Cognition* [DOI](http://doi.org/10.5334/joc.250)

Archer-Boyd, A.W., Harland, A., Goehring, T., Carlyon, RP. (2023) An online implementation of a measure of spectro-temporal processing by cochlear-implant listeners. *JASA Express Letters* [DOI](https://doi.org/10.1121/10.0016838)

Zoefel B, Gilbert RA, Davis MH (2023) Intelligibility improves perception of timing changes in speech. *PLoS ONE* [DOI](https://doi.org/10.1371/journal.pone.0279024)

Wainio-Theberge, S., Armony, J.L. (2023) Antisocial and impulsive personality traits are linked to individual differences in somatosensory maps of emotion. *Sci Rep* [DOI](https://doi.org/10.1038/s41598-023-27880-1)

Labaronne, M., Jarjat, G., & Plancher, G. (2023). Attentional Refreshing in the Absence of Long-Term Memory Content: Role of Short-Term and Long-Term Consolidation. *Journal of Cognition*. [DOI](http://doi.org/10.5334/joc.246)

Jensen, A., Thériault, L., Yilmaz, E., Pon, E., Davidson, PSR. (2023) Mental rotation, episodic memory, and executive control: Possible effects of biological sex and oral contraceptive use. *Neurobiology of Learning and Memory* [DOI](https://doi.org/10.1016/j.nlm.2023.107720)

### 2022 
Lee, J. C., Le Pelley, M. E., & Lovibond, P. F. (2022). Nonreactive testing: Evaluating the effect of withholding feedback in predictive learning. *Journal of Experimental Psychology: Animal Learning and Cognition* [DOI](https://doi.org/10.1037/xan0000311)

Kim, A. J., Lee, D. S., Grindell, J. D., & Anderson, B. A. (2022). Selection history and the strategic control of attention. *Journal of Experimental Psychology: Learning, Memory, and Cognition* [DOI](https://doi.org/10.1037/xlm0001194)

Xie, T., Fu, S. & Mento, G. (2022) Can faces affect object-based attention? Evidence from online experiments. *Atten Percept Psychophys* [DOI](https://doi.org/10.3758/s13414-022-02473-8)

Gemignani, M., Giannotti, M., Schmalz, X., Rigo, P., & De Falco, S. (2022). Attentional Prioritization of Infant Faces in Parents: The Influence of Parents’ Experiences of Care. *International Journal of Environmental Research and Public Health*. [DOI](http://dx.doi.org/10.3390/ijerph20010527)

Barnes, S., Prescott, J. and Adams, J. (2022), Initial evaluation of a mobile therapeutic game for adolescent anxiety disorders. *Mental Health and Social Inclusion* [DOI](https://doi.org/10.1108/MHSI-11-2022-0076)

Roesler*, E., Rieger*, T., & Manzey, D. (2022). Trust towards Human vs. Automated Agents: Using a Multidimensional Trust Questionnaire to Assess The Role of Performance, Utility, Purpose, and Transparency. *Proceedings of the Human Factors and Ergonomics Society Annual Meeting* [DOI](https://doi.org/10.1177/107118132266106)

Schroter, FA., Siebertz, M., Hofmann, P., (2022) Jansen, P. Psychological and socio-demographic factors in the pre-decision stage for the purchase of e-cars. *Current Research in Ecological and Social Psychology* [DOI](https://doi.org/10.1016/j.cresp.2022.100072)

Béna, J., Mauclet, A., & Corneille, O. (2022). Does co-occurrence information influence evaluations beyond relational meaning? An investigation using self-reported and mouse-tracking measures of attitudinal ambivalence. *Journal of Experimental Psychology: General.* [DOI](https://doi.org/10.1037/xge0001308)

Johnson, S.T., Most, S.B.(2022) Taking the path of least resistance now, but not later: Pushing cognitive effort into the future reduces effort discounting. *Psychon Bull Rev*. [DOI](https://doi.org/10.3758/s13423-022-02198-7)

Dahm, S.F.; Muraki, E.J.; Pexman, P.M. (2022) Hand and Foot Selection in Mental Body Rotations Involves Motor-Cognitive Interactions. *Brain Sci.* [DOI](https://doi.org/10.3390/brainsci12111500)

da Fonseca, M., Maffei, G., Moreno-Bote, R. et al. (2022) Mood and implicit confidence independently fluctuate at different time scales. *Cogn Affect Behav Neurosci*. [DOI](https://doi.org/10.3758/s13415-022-01038-4)

Wittmann BC, Şatırer Y. (2022) Decreased associative processing and memory confidence in aphantasia. *Learn Mem.* [DOI](https://doi.org/10.1101/lm.053610.122)

Muhmenthaler, MC, Meier, B. (2022) Attentional attenuation (rather than attentional boost) through task switching leads to a selective long-term memory decline. *Frontiers in Psychology* [DOI](https://doi.org/10.3389/fpsyg.2022.1027871)

Mueckstein, M., Heinzel, S., Granacher, U., Brahms, M., Rapp, MA., Stelzel, C. (2022) Modality-specific effects of mental fatigue in multitasking, *Acta Psychologica* [DOI](https://doi.org/10.1016/j.actpsy.2022.103766)

Béna, J., Corneille, O., Mierop, A., & Unkelbach, C. (2022). Robustness Tests Replicate Corneille et al.’s (2020) Fake News by Repetition Effect. *International Review of Social Psychology* [DOI](http://doi.org/10.5334/irsp.683)

Diana, F., Kawahara, M., Saccardi, I. et al. (2022) A Cross-Cultural Comparison on Implicit and Explicit Attitudes Towards Artificial Agents. *Int J of Soc Robotics*. [DOI](https://doi.org/10.1007/s12369-022-00917-7)

Kessler, Y., Rozanis, M. (2022) Task cues are quickly updated into working memory as part of their processing: The multiple-cue task-switching paradigm. *Psychon Bull Rev*. [DOI](https://doi.org/10.3758/s13423-022-02186-x)

Radović T, Rieger T and Manzey D (2022) A global and local perspective of interruption frequency in a visual search task. *Front. Psychol.* [DOI](https://doi.org/10.3389/fpsyg.2022.951048)

Vos, M., Minor, S., & Ramchand, G. C. (2022). Comparing infrared and webcam eye tracking in the Visual World Paradigm. *Glossa Psycholinguistics* [DOI](http://dx.doi.org/10.5070/G6011131)

Tsang, K. Y., & Mannion, D. J. (2022). Relating Sound and Sight in Simulated Environments. M*ultisensory Research* [DOI](https://doi.org/10.1163/22134808-bja10082)

Kahan TA, Slowiaczek LM, Harrison AC, Bogue CM. (2022) Temporal and sequential negative priming generalise across visual and auditory modalities and are dependent on relative rather than absolute speed. *Quarterly Journal of Experimental Psychology* [DOI](https://doi.org/10.1177/17470218221100248)

Coy N., Bendixen, A., Grimm, S., Roeber, U., & Schröger, E. (2022) Is the Oddball Just an Odd-One-Out? The Predictive Value of Rule-Violating Events *Auditory Perception & Cognition* [DOI](https://doi.org/10.1080/25742442.2022.2094657)

Yildirim, B., Kurdoglu-Ersoy P., Kapucu A., & Tekozel, M. (2022) Is there an infidelity-based reproductive processing advantage in adaptive memory? Effects of survival processing and jealousy processing on recall performance. *Journal of Cognitive Psychology* [DOI](https://doi.org/10.1080/20445911.2022.2090948)

Del Popolo Cristaldi, F., Granziol, U., Bariletti, I., Mento, G. (2022) Doing Experimental Psychological Research from Remote: How Alerting Differently Impacts Online vs. Lab Setting. *Brain Sci.* [DOI](https://doi.org/10.3390/brainsci12081061)

Contemori, G., Saccani, MS., Bonato, M. (2022) Multitasking Effects on Perception and Memory in Older Adults. *Vision* [DOI](https://doi.org/10.3390/vision6030048)

Daoultzis, KC., & Kordoutis, P. (2022) A Pilot Study Testing A New Visual Stimuli Database for Probing Men’s Gender Role Conflict: GRASP (Gender Role Affective Stimuli Pool) *Journal of Homosexuality* [DOI](https://doi.org/10.1080/00918369.2022.2104147)

Chen, X., Hartsuiker, RJ., Muylle, M., Slim, MS., Zhang, C. (2022) The effect of animacy on structural Priming: A replication of Bock, Loebell and Morey (1992) *Journal of Memory and Language* [DOI](https://doi.org/10.1016/j.jml.2022.104354)

Witek, M., Kwiecień, S. Włodarczyk, M., Wrzosek, M., Bondek, J. (2022) Prosody in recognizing dialogue-specific functions of speech acts. Evidence from Polish.
*Language Sciences* [DOI](https://doi.org/10.1016/j.langsci.2022.101499)

Kobzeva A, Sant C, Robbins PT, Vos M, Lohndal T, Kush D. (2022) Comparing Island Effects for Different Dependency Types in Norwegian. *Languages* [DOI](https://doi.org/10.3390/languages7030197)

Norden M, Hofmann A, Meier M, Balzer F, Wolf O, Böttinger E, Drimalla H. (2022) Inducing and Recording Acute Stress Responses on a Large Scale With the Digital Stress Test (DST): Development and Evaluation Study. *J Med Internet Res* [DOI](https://www.jmir.org/2022/7/e32280)

Henke, L., Guseva, M., Wagemans, K. et al. (2022) Surgical face masks do not impair the decoding of facial expressions of negative affect more severely in older than in younger adults. *Cogn. Research*. [DOI](https://doi.org/10.1186/s41235-022-00403-8)
  
Rieger T, Manzey D. (2022) Understanding the Impact of Time Pressure and Automation Support in a Visual Search Task. *Human Factors*. [DOI](https://doi.org/10.1177/00187208221111236)
  
Schreiner MR, Meiser T, Bröder A. (2022) The binding structure of event elements in episodic memory and the role of animacy. *Quarterly Journal of Experimental Psychology* [DOI](https://doi.org/10.1177/17470218221096148) 

Salava, A. and Salmela, V. (2022) Perceptual learning modules in undergraduate dermatology teaching. *Clin Exp Dermatol.* [DOI](https://doi.org/10.1111/ced.15201)

Reichardt, R., Polner, B. & Simor, P. (2022) The graded novelty encoding task: Novelty gradually improves recognition of visual stimuli under incidental learning conditions. *Behav Res* [DOI](https://doi.org/10.3758/s13428-022-01891-8)

Lovibond, P. F., Chow, J. Y. L., Tobler, C., & Lee, J. C. (2022). Reversal of inhibition by no-modulation training but not by extinction in human causal learning. *Journal of Experimental Psychology: Animal Learning and Cognition* Advance online publication. [DOI](https://doi.org/10.1037/xan0000328)

Donato R, Pavan A, Cavallin G, Ballan L, Betteto L, Nucci M, Campana G. (2022) Mechanisms Underlying Directional Motion Processing and Form-Motion Integration Assessed with Visual Perceptual Learning. *Vision* [DOI](https://doi.org/10.3390/vision6020029)

Appelganc K, Rieger T, Roesler E, Manzey D. (2022) How Much Reliability Is Enough? A Context-Specific View on Human Interaction With (Artificial) Agents From Different Perspectives. *Journal of Cognitive Engineering and Decision Making* [DOI](https://doi.org/doi:10.1177/15553434221104615)

Ringer, H., Schröger, E., Grimm, S. (2022) Perceptual Learning and Recognition of Random Acoustic Patterns *Auditory Perception & Cognition* [DOI](http://doi.org/10.1080/25742442.2022.2082827)

Rosi, V., Houix, O. Misdariis, N., Susini, P. (2022) Investigating the Shared Meaning of Metaphorical Sound Attributes: Bright, Warm, Round, and Rough. *Music Perception* [DOI](https://doi.org/10.1525/mp.2022.39.5.468)

Rahe, M., Weigelt, M., Jansen, P. Mental rotation with colored cube figures. *Consciousness and Cognition* [DOI](https://doi.org/10.1016/j.concog.2022.103350)

Everhardt, M., Sarampalis, A., Coler, M., Baskent, D., Lowie, W. (2022) Interpretation of prosodically marked focus in cochlear implant-simulated speech by non-native listeners. *Proc. Speech Prosody*. [DOI](https://doi.org/10.21437/SpeechProsody.2022-15)

Palmer, C.J., Goddard, E., Clifford, C.W.G. (2022) Face detection from patterns of shading and shadows: The role of overhead illumination in generating the familiar appearance of the human face. *Cognition* [DOI](https://doi.org/10.1016/j.cognition.2022.105172)

Frances, C., Navarra-Barindelli E., Martin C.D. (2022) Speaker Accent Modulates the Effects of Orthographic and Phonological Similarity on Auditory Processing by Learners of English. *Frontiers in Psychology* [DOI](https://doi.org/10.3389/fpsyg.2022.892822)  

Ciston, A.B., Forster, C. Brick, TR.,Kühn, S., Verrel, J., Filevich, E. (2022) Do I look like I'm sure?: Partial metacognitive access to the low-level aspects of one's own facial expressions. *Cognition* [DOI](https://doi.org/10.1016/j.cognition.2022.105155)

Sauter, M., Stefani, M. & Mack, W. "Equal Quality for Online and Lab Data: A Direct Comparison from Two Dual-Task Paradigms" *Open Psychology* [DOI](https://doi.org/10.1515/psych-2022-0003)

Lauren A. Homann, Brady R. T. Roberts, Sara Ahmed & Myra A. Fernandes (2022) Are emojis processed visuo-spatially or verbally? Evidence for dual codes *Visual Cognition* [DOI](https://doi.org/10.1080/13506285.2022.2050871)

Marocchini E., Domaneschi F. (2022) “Can you read my mind?” Conventionalized indirect requests and Theory of Mind abilities *Journal of Pragmatics* [DOI](https://doi.org/10.1016/j.pragma.2022.03.011)

Vainre M, Galante J, Watson P, et al (2022). Protocol for the Work Engagement and Well-being Study (SWELL): a randomised controlled feasibility trial evaluating the effects of mindfulness versus light physical exercise at work. *BMJ Open*; [DOI](https://doi.org/10.1136/bmjopen-2021-050951)

Xie, T., Fu, S. & Mento, G. (2022) Can faces affect object-based attention? Evidence from online experiments. *Atten Percept Psychophys*. [DOI](https://doi.org/10.3758/s13414-022-02473-8)

Scholl J, Trier HA, Rushworth MFS, Kolling N (2022) The effect of apathy and compulsivity on planning and stopping in sequential decision-making. *PLOS Biology* [DOI](https://doi.org/10.1371/journal.pbio.3001566)

Levinson, M., Baillet, S. (2022) Perceptual filling-in dispels the veridicality problem of conscious perception research, *Consciousness and Cognition* [DOI](https://doi.org/10.1016/j.concog.2022.103316)

Huang, C., Donk, M., & Theeuwes, J. (2022). Proactive enhancement and suppression elicited by statistical regularities in visual search. *Journal of Experimental Psychology: Human Perception and Performance*. [DOI](https://doi.org/10.1037/xhp0001002)

Jevtović, M., Antzaka, A., & Martin, C. D. (2022). Gepo with a G, or Jepo with a J? Skilled Readers Generate Orthographic Expectations for Novel Spoken Words Even When Spelling is Uncertain. *Cognitive Science* [DOI](https://doi.org/10.1111/cogs.13118)

Drewes, L., Nissen, V. Akzeptierte Geschäftsprozesse gestalten und implementieren. (2022) *HMD* [DOI](https://doi.org/10.1365/s40702-022-00856-x)

Roquet, A., Lallement, C. & Lemaire, P. Sequential modulations of emotional effects on cognitive performance in young and older adults. *Motiv Emot* (2022). [DOI](https://doi.org/10.1007/s11031-022-09932-7)
  
Quent JA, Henson RN. Novel immersive virtual reality experiences do not produce retroactive memory benefits for unrelated material. (2022) *Quarterly Journal of Experimental Psychology*. [DOI](http://dx.doi.org/10.1177/17470218221082491)

Li, A.-S., Bogaerts, L., & Theeuwes, J. (2022). Statistical learning of across-trial regularities during serial search. *Journal of Experimental Psychology: Human Perception and Performance*. [DOI](http://dx.doi.org/10.1037/xhp0000987)

Verkhodanova, V., Coler, M., Jonkers, R., Timmermans, S., Maurits, N., de Jong, B., Lowie, W. (2022) A cross-linguistic perspective to classification of healthiness of speech in Parkinson's disease. *Journal of Neurolinguistics* [DOI](https://doi.org/10.1016/j.jneuroling.2022.101068)

Rouy, M., de Gardelle, V., Reyes, G., Sackur, J., Vergnaud, J. C., Filevich, E., & Faivre, N. (2022). Metacognitive improvement: Disentangling adaptive training from experimental confounds. *Journal of Experimental Psychology: General*. [DOI](https://doi.org/10.1037/xge0001185)

Gao, Y., Theeuwes, J. (2022) Learning to suppress a location does not depend on knowing which location. *Atten Percept Psychophys* [DOI](https://doi.org/10.3758/s13414-021-02404-z)

Dijkstra, N., Kok, P., & Fleming, S. M. (2022). Imagery adds stimulus-specific sensory evidence to perceptual detection. *Journal of Vision*. [DOI](https://doi.org/10.1167/jov.22.2.11)


Jusepeitis, A., & Rothermund, K. (2022). No elephant in the room: The incremental validity of implicit self-esteem measures. *Journal of Personality*. [DOI](https://doi.org/10.1111/jopy.12705)

Bogaerts, L., van Moorselaar, D., & Theeuwes, J. (2022). Does it help to expect distraction? Attentional capture is attenuated by high distractor frequency but not by trial-to-trial predictability. *Journal of Experimental Psychology: Human Perception and Performance*. [DOI](https://doi.org/10.1037/xhp0000986)

Lacassagne, D., Béna, J., Corneille, O. (2022). Is Earth a perfect square? Repetition increases the perceived truth of highly implausible statements. *Cognition* [DOI](https://doi.org/10.1016/j.cognition.2022.105052)

Béna, J. & Corneille, O. (2022). Revisiting Dissociation Hypotheses with a Structural fit Approach: The Case of the Prepared Reflex Framework. *Journal of Experimental Social Psychology*. [DOI](10.1016/j.jesp.2022.104297)

Scaltritti, M., Job, R. & Sulpizio, S. (2022) Different types of semantic interference, same lapses of attention: Evidence from Stroop tasks. *Mem Cogn*. [DOI](https://doi.org/10.3758/s13421-021-01256-0)

Zhang J, Wu Y. (2022) Epistemic reasoning in pragmatic inferencing by non-native speakers: The case of scalar implicatures. *Second Language Research*. [DOI](doi:10.1177/02676583211069735)

Vandendaele, A., Grainger, J. (2022). Now you see it, now you don't: Flanker presence induces the word concreteness effect. *Cognition* [DOI](10.1016/j.cognition.2021.104945).



### 2021
Shyr, MC, and Joshi, SS. (2021) Validation of the Bayesian sensory uncertainty model of motor adaptation with a remote experimental paradigm *IEEE 2nd International Conference on Human-Machine Systems (ICHMS)* [DOI](https://doi.org/10.1109/ICHMS53169.2021.9582639)

Román-Caballero, R., Marotta, A., & Lupiáñez, J. (2021). Target–background segregation in a spatial interference paradigm reveals shared and specific attentional mechanisms triggered by gaze and arrows. Journal of Experimental Psychology: Human Perception and Performance, 47(11), 1561–1573. [DOI](https://doi.org/10.1037/xhp0000953)

van Moorselaar, D., & Theeuwes, J. (2021). Statistical distractor learning modulates perceptual sensitivity. Journal of Vision, 21(12), 3. [DOI](https://doi.org/10.1167/jov.21.12.3)

Verkhodanova, V., Coler, M., Jonkers, R., & Lowie, W. (2021) How expertise and language familiarity influence perception of speech of people with Parkinson’s disease, *Clinical Linguistics & Phonetics*, [DOI](DOI: 10.1080/02699206.2021.2003433)

Gorin, S. (2021). EXPRESS: Temporal grouping effects in verbal and musical short-term memory: Is serial order representation domain-general? *Quarterly Journal of Experimental Psychology*. [DOI](https://doi.org/10.1177/17470218211057466)

van Moorselaar, D., Theeuwes, J. (2021) Spatial suppression due to statistical regularities in a visual detection task. *Atten Percept Psychophys.* [DOI](https://doi.org/10.3758/s13414-021-02330-0)

Lallement, C. & Lemaire, P. (2021) Age-related differences in how negative emotions influence arithmetic performance, *Cognition and Emotion* [DOI](10.1080/02699931.2021.1967884)

Mazor, M., Moran, R., Fleming, SM. (2021) Metacognitive asymmetries in visual perception, *Neuroscience of Consciousness*, Volume 2021, Issue 1, 2021, niab005, [DOI](https://doi.org/10.1093/nc/niab005)

Tejada, J., Freitag, R.M.K., Pinheiro, B.F.M. et al (2021). Building and validation of a set of facial expression images to detect emotions: a transcultural study. *Psychological Research* . [DOI](https://doi.org/10.1007/s00426-021-01605-3)

Singer-Landau, E., & Meiran, N. (2021). Cognitive appraisal contributes to feeling generation through emotional evidence accumulation rate: Evidence from instructed fictional reappraisal. *Emotion*. Advance online publication. [DOI](https://doi.org/10.1037/emo0001006)

de Waard, J., Bogaerts, L., Van Moorselaar, D., Theeuwes, J. (2021). Surprisingly inflexible: statistically learned suppression of distractors generalizes across contexts Attention, Perception, and Psychophysics (in press). *Attention Perception & Psychophysics*. 

Jost, L., & Jansen, P. (2021). Are implicit affective evaluations related to mental rotation performance? *Consciousness and Cognition*, 94, 103178. [DOI](https://doi.org/10.1016/j.concog.2021.103178)

Stark, C., Clemenson, G., Aluru, U., Hatamian, N., Stark, S. (2021). Playing Minecraft Improves Hippocampal-Associated Memory for Details in Middle Aged Adults. *Frontiers in Sports and Active Living*. 3. 685286. [DOI](https://doi.org/10.3389/fspor.2021.685286). 

Crivelli, D., Peviani, V., Salvato, G., Bottini, G. (2021). Exploring the Interaction Between Handedness and Body Parts Ownership by Means of the Implicit Association Test. *Frontiers in Human Neuroscience* 15. 681904. [DOI](https://doi.org/10.3389/fnhum.2021.681904). 

Mazor, M. & Moran, R. & Fleming, S. (2021). Metacognitive asymmetries in visual perception. *Neuroscience of Consciousness*. [DOI](https://doi.org/10.1093/nc/niab005). 

Meier, B. & Muhmenthaler, M. (2021). Different Impact of Perceptual Fluency and Schema Congruency on Sustainable Learning. *Sustainability*. 13. 7040. [DOI](https://doi.org/10.3390/su13137040).

Ben-Yakov, A., Smith, V., Henson, R. (2021). The limited reach of surprise: Evidence against effects of surprise on memory for preceding elements of an event. *Psychonomic Bulletin & Review*. [DOI](https://doi.org/10.3758/s13423-021-01954-5). 

Dijkstra, N., Mazor, M., Kok, P., Fleming, S. (2021). Mistaking imagination for reality: Congruent mental imagery leads to more liberal perceptual detection. *Cognition*. 212. 104719. [DOI](https://doi.org/10.1016/j.cognition.2021.104719). 

Hamami, Y., Mumma, J., Amalric, M. (2021). Counterexample Search in Diagram‐Based Geometric Reasoning. *Cognitive Science*. 45. [DOI](https://doi.org/10.1111/cogs.12959). 

Kobayashi, M. (2021). Replication of recall-based memory phenomena via an online experiment 再生テストに基づく記憶現象のオンライン実験による再現. *The Japanese journal of psychology*. [DOI](https://doi.org/10.4992/jjpsy.92.20213). 

Krüger, A., Tünnermann, J., Stratmann, L., Dressler, F., Scharlau, I. (2021). TVA in the wild: Applying the theory of visual attention to game-like and less controlled experiments. *Open Psychology*. 3. 1-46. [DOI](https://doi.org/10.1515/psych-2021-0001)   

Steinke, A., Kopp, B. Lange, F. (2021). The Wisconsin Card Sorting Test: Split-Half Reliability Estimates for a Self-Administered Computerized Variant. *Brain Sciences*. 11. 529. [DOI](https://doi.org/10.3390/brainsci11050529) 

Zhang, C., Bernolet, S., Hartsuiker, RJ. (2021) Are there segmental and tonal effects on syntactic encoding? Evidence from structural priming in Mandarin. *Journal of Memory and Language* 119 [DOI](https://doi.org/10.1016/j.jml.2021.104220)

Los, S.A., Nieuwenstein, J., Bouharab, A., Stephens, D.J., Meeter, M., Kruijne, W. (2021) The warning stimulus as retrieval cue: The role of associative memory in temporal preparation. *Cognitive Psychology* 125(2):101378 [DOI](https://doi.org/10.1016/j.cogpsych.2021.101378)

Vogt, A., Hauber, R., Kuhlen, A.K. et al. (2021) Internet-based language production research with overt articulation: Proof of concept, challenges, and practical advice. *Behav Res* (2021). [DOI](https://doi.org/10.3758/s13428-021-01686-3)

Neto, P. A. S. O., Cui, A.-X., Rojas, P., Vanzella, P., & Cuddy, L. L. (2021). Not just cents: Physical and psychological influences on interval perception. *Psychomusicology: Music, Mind, and Brain.* Advance online publication. [DOI](https://doi.org/10.1037/pmu0000272)

Los, S.A., Nieuwenstein, J., Bouharab, A., Stephens, D.J., Meeter, M., Kruijne, W. (2021) The warning stimulus as retrieval cue: The role of associative memory in temporal preparation. *Cognitive Psychology*, 125, 101378. [DOI](10.1016/j.cogpsych.2021.101378) 

Ren, K., & Gunderson, E. A. (2021). The dynamic nature of children’s strategy use after receiving accuracy feedback in decimal comparisons. *Journal of Experimental Child Psychology*, 202, 105015. [DOI](https://doi.org/10.1016/j.jecp.2020.105015) 


### 2020

Krüger, A., Tünnermann, J. Stratmann, L., Briese, L., Dressler, F. and Scharlau, I. (2020) TVA in the wild: Applying the theory of visual attention to game-like and less controlled experiments, *Open Psychology*, 2020.

Vari, J. & Tamburelli, M. (2020) Standardisation: bolstering positive attitudes towards endangered language varieties? Evidence from implicit attitudes. *Journal of Multilingual and Multicultural Development*. [DOI](https://doi.org/10.1080/01434632.2020.1829632)

Verkhodanova V., Trčková D., Coler M., Lowie W. (2020) More than Words: Cross-Linguistic Exploration of Parkinson’s Disease Identification from Speech. In: Karpov A., Potapova R. (eds) Speech and Computer. SPECOM 2020. Lecture Notes in Computer Science, vol 12335. Springer, Cham. [DOI](https://doi.org/10.1007/978-3-030-60276-5_59)

Scarpina, F. (2020) Detection and Recognition of Fearful Facial Expressions During the Coronavirus Disease (COVID-19) Pandemic in an Italian Sample: An Online Experiment. *Front. Psychol.* [DOI](https://doi.org/10.3389/fpsyg.2020.02252)

Qiu, M., Johns, B.T. (2020) Semantic diversity in paired-associate learning: Further evidence for the information accumulation perspective of cognitive aging. *Psychonomic Bulletin & Review* 27, 114–121. [DOI](https://link.springer.com/article/10.3758%2Fs13423-019-01691-w)

Dolscheid, S., Çelik, S., Erkan, H., Küntay, A., & Majid, A. (2020). Space-pitch associations differ in their susceptibility to language. *Cognition*, 196, 104073. [DOI](https://doi.org/10.1016/j.cognition.2019.104073)

Richan, E., Rouat, J. A proposal and evaluation of new timbre visualization methods for audio sample browsers. *Pers Ubiquit Comput* (2020). [DOI](https://doi.org/10.1007/s00779-020-01388-1)

### 2019

Richan, E., & Rouat, J. (2019). A study comparing shape, colour and texture as visual labels in audio sample browsers. Proceedings of the 14th International Audio Mostly Conference: A Journey in Sound, 223–226. [DOI](https://doi.org/10.1145/3356590.3356624)

Cooper, E., Greve, A., & Henson, R. N. (2019). Investigating Fast Mapping Task Components: No Evidence for the Role of Semantic Referent nor Semantic Inference in Healthy Adults. *Frontiers in psychology*, 10, 394. [DOI](https://doi.org/10.3389/fpsyg.2019.00394)

MacGregor, L. J., Rodd, J. M., Gilbert, R. A., Hauk, O., Sohoglu, E., & Davis, M. H. (2019). The Neural Time Course of Semantic Ambiguity Resolution in Speech Comprehension. *Journal of Cognitive Neuroscience*, 1–23. [DOI](https://doi.org/10.1162/jocn_a_01493)

Ren, K., & Gunderson, E. A. (2019). Malleability of whole-number and fraction biases in decimal comparison. *Developmental Psychology*, 55(11), 2263–2274. [DOI](10.1037/dev0000797)

### 2018

Kolling, N., Scholl, J., Chekroud, A., Trier, H. A., & Rushworth, M. F. S. (2018). Prospection, Perseverance, and Insight in Sequential Behavior. *Neuron*, 99(5), 1069-1082.e7. [DOI](https://doi.org/10.1016/j.neuron.2018.08.018)

Presaghi, F., & Rullo, M. (2018). Is Social Categorization Spatially Organized in a “Mental Line”? Empirical Evidences for Spatial Bias in Intergroup Differentiation. *Frontiers in Psychology*, 9. [DOI](https://doi.org/10.3389/fpsyg.2018.00152)

### 2017 

Niemann, M., Elischberger, F., Diedam, P., Hopkins, J., Thapa, R., de Siqueira Braga, D., … de L. Neto, F. B. (2017). A Novel Serious Game for Trust-Related Data Collection in Supply Chains. In M. Alcañiz, S. Göbel, M. Ma, M. Fradinho Oliveira, J. Baalsrud Hauge, & T. Marsh (Eds.), *Serious Games* (pp. 121–125). [DOI](https://doi.org/10.1007/978-3-319-70111-0_11)

Filevich, E., Horn, S. S., & Kühn, S. (2017). Within-person adaptivity in frugal judgments from memory. *Psychological Research*, 1–18. [DOI](https://doi.org/10.1007/s00426-017-0962-7)
